# gemini-migration-mythos

./: README.md  gemini-extension.json  plugin.json  pyproject.toml
agents/: migration-architect.md  migration-validator.md
skills/legacy-context-engineer/: SKILL.md
skills/legacy-feature-archaeologist/: SKILL.md
skills/migration-mythos/: SKILL.md
skills/migration-mythos/scripts/: diff_versions.py
src/gemini_migration_mythos/: __init__.py
