[project]
name = "gemini-migration-mythos"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eduardo Batista", email = "63757526+Edwardmaster7@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
