[project]
name = "gemini-migration-mythos"
version = "1.3.0"
description = "Bundle de migração ponta-a-ponta: inclui Orquestrador (Migration Mythos), Engenharia de Contexto Legado e Arqueologia de Features."
readme = "README.md"
authors = [
    { name = "Eduardo Batista", email = "63757526+Edwardmaster7@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
